# mlx-vllm

./: pyproject.toml
src/mlx_vllm/: __init__.py  config.py  server.py  types.py
src/mlx_vllm/api/: __init__.py  routes.py
src/mlx_vllm/engine/: __init__.py  async_engine.py  generation.py
src/mlx_vllm/entrypoints/: __init__.py  cli.py
tests/: __init__.py  test_api.py  test_engine.py  test_lora_hotswap.py
