[project]
name = "mlx-vllm"
version = "0.1.0"
description = "OpenAI-compatible inference server using MLX as the backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Eli Gottlieb" }]
keywords = ["mlx", "vllm", "inference", "llm", "openai", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx-lm>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "tiktoken>=0.8.0",
    "huggingface-hub>=0.26.0",
    "transformers>=5.0.0rc1",
    "openai>=1.0.0",
]

[tool.uv]
prerelease = "allow"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
mlx-vllm = "mlx_vllm.entrypoints.cli:main"

[project.urls]
Homepage = "https://github.com/eligottlieb/mlx-vllm"
Repository = "https://github.com/eligottlieb/mlx-vllm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_vllm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
